<resources>
    <string name="app_name">Ecommerce</string>
    <string name="navbar_menu_home">Home</string>
    <string name="navbar_menu_cart">Cart</string>
    <string name="navbar_profile_cart">Profile</string>
    <string name="price_str">Fiyat: TL</string>
    <string name="discount_str">Indirim:   TL</string>
    <string name="category_str">Kategori: </string>
    <string name="rating_str">Rating:s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="my_shopping_list">My Shopping List</string>
    <string name="added_to_cart">Added to cart</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="error">Error</string>
    <string name="products_list_appbar_title">Products List</string>
    <string name="product_detail_appbar_title">Product Detail</string>
    <string name="shopping_list_appbar_title">Your Shopping List</string>
    <string name="check_username_pass">Please check your username and password!</string>
    <string name="please_not_blanks">Please not blanks!</string>
    <string name="shopping_list_delete_warn">Are you sure you want to delete this product from cart?</string>
    <string name="favorite_list_delete_warn">Are you sure you want to delete this product from favorite list?</string>
    <string name="shopping_list_item_deleted_txt">Product deleted from cart.</string>
    <string name="remember_me_str">Remember me</string>
    <string name="search_hint">Search Product</string>
    <string name="title_shopping_cart">Shopping Cart</string>
    <string name="title_profile">Profile</string>
    <string name="title_product_info">Product Info</string>
    <string name="product_image">Product Image</string>
    <string name="logout">Logout</string>
    <string name="progress_bar">progress bar</string>
    <string name="profile_picture_content_desc">Profile Picture</string>
    <string name="no_internet_connection_dialog">Internet connection is not available. Would you like to go to settings and enable it?</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="splash_txt">Shop Smart, Shop Easy, Shop with Us!</string>
    <string name="total_price_format">"Total Price: "</string>
    <string name="switch_theme_txt">Switch Theme</string>
    <string name="sign_up_success">Created account successfully!</string>
    <string name="empty_fields">Please do not blank fields!</string>
    <string name="remind_me_btn_txt">Remind me</string>
    <string name="favorite">Favorite</string>
    <string name="title_favorite">Favorite Products</string>
    <string name="deleted_favorite_list">Product deleted from favorite list</string>
    <string name="add_to_favorite">Add to Favorite</string>
    <string name="create_account">Create Account</string>
    <string name="your_name_hint">Your name</string>
    <string name="your_surname_hint">Your surname</string>
    <string name="do_you_want_to_exit">Do you want to exit?</string>
    <string name="sign_up_error">Account not created!</string>
    <string name="please_enter_your_email">Please Enter Your Email</string>
    <string name="reset_password">Reset Password</string>
    <string name="do_you_want_to_delete_profile_picture">Do you want to delete profile picture?</string>
    <string name="password_reset_link_sent">Password reset link sent to your email address</string>
    <string name="sign_up">Sign Up</string>
    <string name="firebase_login">Firebase Login</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="added_to_favorite">Added to favorite</string>
    <string name="your_name">Your name</string>
    <string name="your_surname">Your surname</string>
    <string name="your_phone">Your phone</string>
    <string name="already_have_account">Already have account?</string>
    <string name="log_in">Log in</string>
    <string name="product_image_content">Product Image</string>
    <string name="total_price">Total Price</string>
    <string name="filled_heart_content">filled heart</string>
    <string name="decrement_button">decrement button</string>
    <string name="increment_button">increment button</string>
    <string name="buy_now">Buy Now</string>
    <string name="total_amount">Total Amount</string>
</resources>