<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/navbar_menu_home"/>
    <item
        android:id="@+id/cartFragment"
        android:enabled="true"
        android:icon="@drawable/ic_cart"
        android:title="@string/navbar_menu_cart"/>
    <item
        android:id="@+id/favoriteFragment"
        android:enabled="true"
        android:icon="@drawable/ic_favorite"
        android:title="@string/favorite"/>
    <item
        android:id="@+id/profileFragment"
        android:enabled="true"
        android:icon="@drawable/ic_profile"
        android:title="@string/navbar_profile_cart"/>
</menu>