<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.auth.sign_in.SignInFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username_input_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_80sdp"
        app:boxCornerRadiusBottomEnd="@dimen/_5sdp"
        app:boxCornerRadiusBottomStart="@dimen/_5sdp"
        app:boxCornerRadiusTopEnd="@dimen/_10sdp"
        app:boxCornerRadiusTopStart="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_input_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24sdp"
        app:boxCornerRadiusBottomEnd="@dimen/_5sdp"
        app:boxCornerRadiusBottomStart="@dimen/_5sdp"
        app:boxCornerRadiusTopEnd="@dimen/_10sdp"
        app:boxCornerRadiusTopStart="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="@+id/username_input_container"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/username_input_container"
        app:layout_constraintTop_toBottomOf="@+id/username_input_container">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:autofillHints="password"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_40sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:text="@string/action_sign_in"
        app:layout_constraintEnd_toEndOf="@+id/password_input_container"
        app:layout_constraintStart_toStartOf="@+id/password_input_container"
        app:layout_constraintTop_toBottomOf="@+id/password_input_container" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/btn_sign_in"
        app:layout_constraintEnd_toEndOf="@+id/btn_sign_in"
        app:layout_constraintStart_toStartOf="@+id/btn_sign_in"
        app:layout_constraintTop_toTopOf="@+id/btn_sign_in" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sign_up"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="@dimen/_73sdp"
        android:layout_height="@dimen/_48sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="?android:colorPrimary"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btn_sign_in"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/have_account_txt"
        app:layout_constraintTop_toBottomOf="@+id/btn_sign_in"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/have_account_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_63sdp"
        android:text="@string/don_t_have_account"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_sign_up"
        app:layout_constraintStart_toStartOf="@+id/btn_sign_in"
        app:layout_constraintTop_toTopOf="@+id/btn_sign_up" />

    <TextView
        android:id="@+id/btn_forgot_pw"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_40sdp"
        android:clickable="true"
        android:gravity="center"
        android:padding="@dimen/_5sdp"
        android:text="@string/forgot_your_password"
        android:textColor="?android:colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/btn_sign_in"
        app:layout_constraintEnd_toEndOf="@+id/password_input_container"
        app:layout_constraintTop_toBottomOf="@+id/password_input_container" />
</androidx.constraintlayout.widget.ConstraintLayout>