<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/pfp_image"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_80sdp"
        android:layout_gravity="center"
        app:strokeColor="?android:colorPrimary"
        app:strokeWidth="@dimen/_1sdp"
        android:layout_margin="@dimen/_32sdp"
        android:contentDescription="@string/profile_picture_content_desc"
        android:src="@drawable/ic_plus"
        app:layout_constraintBottom_toTopOf="@+id/profile_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent" />

    <TextView
        android:id="@+id/profile_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8sdp"
        android:padding="@dimen/_8sdp"
        android:textAlignment="textStart"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pfp_image"
        tools:text="@tools:sample/first_names" />

    <TextView
        android:id="@+id/profile_surname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8sdp"
        android:padding="@dimen/_8sdp"
        android:textAlignment="textStart"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintEnd_toEndOf="@+id/profile_name"
        app:layout_constraintStart_toStartOf="@+id/profile_name"
        app:layout_constraintTop_toBottomOf="@+id/profile_name"
        tools:text="@tools:sample/last_names" />

    <TextView
        android:id="@+id/profile_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8sdp"
        android:padding="@dimen/_8sdp"
        android:textAlignment="textStart"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintEnd_toEndOf="@+id/profile_name"
        app:layout_constraintStart_toStartOf="@+id/profile_name"
        app:layout_constraintTop_toBottomOf="@+id/profile_surname"
        tools:text="@tools:sample/lorem" />

    <TextView
        android:id="@+id/profile_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8sdp"
        android:padding="@dimen/_8sdp"
        android:textAlignment="textStart"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintEnd_toEndOf="@+id/profile_name"
        app:layout_constraintStart_toStartOf="@+id/profile_name"
        app:layout_constraintTop_toBottomOf="@+id/profile_mail"
        tools:text="@tools:sample/lorem" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_15sdp"
        android:text="@string/logout"
        app:layout_constraintEnd_toEndOf="@+id/profile_phone"
        app:layout_constraintStart_toStartOf="@+id/profile_phone"
        app:layout_constraintTop_toBottomOf="@+id/switch_theme" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8sdp"
        android:padding="@dimen/_8sdp"
        android:text="@string/switch_theme_txt"
        android:textSize="@dimen/_15ssp"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="@+id/profile_name"
        app:layout_constraintStart_toStartOf="@+id/profile_name"
        app:layout_constraintTop_toBottomOf="@+id/profile_phone" />

    <ImageView
        android:id="@+id/profile_progress_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:background="@color/md_theme_light_onPrimary"
        android:contentDescription="@string/progress_bar"
        android:src="@drawable/progressbar_animation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
