<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="8dp"
    app:cardElevation="10dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <androidx.viewpager2.widget.ViewPager2
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="horizontal"
            android:id="@+id/viewPager"
            />
        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:tabBackground="@drawable/indicator"
            app:tabGravity="center"
            android:backgroundTint="@color/transparent"
            app:tabIndicatorHeight="0dp"
            app:tabIndicatorGravity="center"
            app:tabIndicator="@null"/>

        <TextView
            android:id="@+id/detail_product_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Title"
            style="@style/ProductTitleTextView"/>

        <TextView
            android:id="@+id/detail_product_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Description"
            android:singleLine="false"
            android:lines="3"
            style="@style/ProductTextView" />

        <TextView
            android:id="@+id/detail_product_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="price"
            android:textColor="?android:colorPrimary"
            android:textStyle="bold"
            style="@style/ProductTextView" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp">

            <TextView
                android:id="@+id/detail_product_rating_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="rating"
                android:textColor="?android:colorPrimary"
                android:textStyle="bold"
                android:layout_marginEnd="5dp"

                />
            <RatingBar
                android:id="@+id/detail_product_rating"
                style="?attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:rating="3" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_add_to_cart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/add_to_cart"
                android:layout_margin="5dp"/>

            <Button
                android:id="@+id/btn_add_to_fav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/add_to_favorite"
                android:layout_margin="5dp"/>
        </LinearLayout>

    </LinearLayout>
    <ImageView
        android:id="@+id/detail_progress_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:contentDescription="@string/progress_bar"
        android:src="@drawable/progressbar_animation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.cardview.widget.CardView>